fixed issue where logo was being cutoff on home page

--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,8 +1,8 @@
 h1 {
 	font-family: 'Josefin Sans', sans-serif;
 }
-a {
-	color: white;
+br {
+	background-color: #78171c;
 }
 .container { 
 	clear: both;
@@ -19,8 +19,8 @@ a {
 	height: 90vh;
 	opacity: 0.4;
 	left: 0;
-  }
- .content {
+}
+.content {
 	margin: 0;
 	margin-top: 180px;
 } 
@@ -44,6 +44,7 @@ a {
 .smallSpace {
 	height: 100px;
 	background-color: #78171c;
+	z-index: -1;
 }
 .space {
 	height: 250px;
